# Flowinone

./: .gitignore  README.md  config.py  file_handler.py  pyproject.toml  requirements.txt  routes.py
src/file_handler/: __init__.py  chrome.py  chrome_bookmarks.py  eagle.py  eagle_integration.py  fs_media.py  item_db.py  local_fs.py  media_cache.py  models.py  paths.py
templates/: _navbar.html  clear_thumbnails_result.html  index.html  item_db_view.html  update_db_result.html  update_thumbnails_result.html  view_both.html
templates/components/: _metadata_panel.html
