[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowinone"
version = "0.1.0"
description = "Unified visual knowledge hub combining Eagle, local media, and Chrome bookmarks."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Flowinone Developers"}
]
dependencies = [
    "Flask>=2.2.0",
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "beautifulsoup4>=4.11.0"
]

[project.urls]
Homepage = "https://github.com/your-name/flowinone"
Documentation = "https://github.com/your-name/flowinone#readme"

[tool.setuptools]
py-modules = ["config", "routes", "run"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["eagle_api", "file_handler"]

[tool.setuptools.package-data]
"*" = ["templates/*.html", "static/**/*", "data/**/*"]
